Add script to generate the elinkskeys(5) manpage by globbing src/config/kbdbind.c.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.44 2005/05/14 16:47:18 jonas Exp $
+## $Id: Makefile.am,v 1.45 2005/05/14 20:09:26 jonas Exp $
 
 SUBDIRS = man book
 
@@ -31,9 +31,12 @@ CLEANFILES = \
  $(TMPBOOK)
 
 ELINKS			= $(top_builddir)/src/elinks
+KBDBIND			= $(top_srcdir)/src/config/kbdbind.c
 HELP2DOC		= $(top_srcdir)/doc/tools/help2doc
 MAKE_ELINKS_MANPAGE	= $(top_srcdir)/doc/tools/make-elinks-manpage
+MAKE_ELINKSKEYS_MANPAGE	= $(top_srcdir)/doc/tools/make-elinkskeys-manpage
 MAN_ELINKS_CONF		= $(top_srcdir)/doc/man/man5/elinks.conf.5
+MAN_ELINKSKEYS		= $(top_srcdir)/doc/man/man5/elinkskeys.5
 MAN_ELINKS		= $(top_srcdir)/doc/man/man1/elinks.1.in
 
 %.man.xml: %.man.txt
@@ -46,12 +49,24 @@ MAN_ELINKS		= $(top_srcdir)/doc/man/man1/elinks.1.in
 	xmlto man $<
 	mv $@ $(MAN_ELINKS)
 
+%.5: %.man.xml
+	xmlto man $<
+	mv $@ $(MAN_ELINKSKEYS)
+
 elinks.%.txt: $(MAKE_ELINKS_MANPAGE)
 	@if test ! -x "$(ELINKS)";						\
 	then									\
 		echo "There is no '$(ELINKS)' to update from.";			\
 	else									\
 		$(MAKE_ELINKS_MANPAGE) $@ $(ELINKS) > $@;			\
+	fi
+
+elinkskeys.%.txt: $(MAKE_ELINKSKEYS_MANPAGE)
+	@if test ! -e "$(KBDBIND)";						\
+	then									\
+		echo "There is no '$(KBDBIND)' to update from.";		\
+	else									\
+		$(MAKE_ELINKSKEYS_MANPAGE) $< $(KBDBIND) > $@;			\
 	fi
 
 update-manpages:
