--- a/configure.in
+++ b/configure.in
@@ -127,7 +127,7 @@ EL_CHECK_CODE(typeof, HAVE_TYPEOF, [], [int a; typeof(a) b;])
 AC_SYS_LARGEFILE
 AC_TYPE_SIZE_T
 AC_TYPE_OFF_T
-AC_CHECK_TYPE(ssize_t, int)
+EL_CHECK_TYPE(ssize_t, int)
 EL_CHECK_SYS_TYPE(long long, HAVE_LONG_LONG, [])
 EL_CHECK_INT_TYPE(int32_t, HAVE_INT32_T)
 EL_CHECK_INT_TYPE(uint32_t, HAVE_UINT32_T)
