--- a/src/config/Makefile.am
+++ b/src/config/Makefile.am
@@ -1,10 +1,13 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.14 2003/10/22 22:50:59 jonas Exp $
+## $Id: Makefile.am,v 1.15 2005/05/16 19:50:04 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
 
 noinst_LIBRARIES = libconfig.a
 libconfig_a_SOURCES = \
+ actions-edit.inc \
+ actions-main.inc \
+ actions-menu.inc \
  cmdline.c \
  cmdline.h \
  conf.c \
