--- a/doc/tools/import-features.conf
+++ b/doc/tools/import-features.conf
@@ -3,7 +3,7 @@
 # Generate asciidoc from the features.conf file in the top-level direftory.
 # Copyright (c) Jonas Fonseca <fonseca@diku.dk>, 2005
 #
-# $Id: import-features.conf,v 1.1 2005/05/18 00:00:04 jonas Exp $
+# $Id: import-features.conf,v 1.2 2005/05/18 00:45:26 jonas Exp $
 
 TMPFILE=$(mktemp import-features.conf.XXXXXX) || exit 1
 
@@ -34,7 +34,7 @@ print_section()
 			label=
 			if [ -n "$config_name" ]; then
 				section_title="$section_title (\`$config_name\`)"
-				label="[[$config_name]]"
+				label="[[$(echo $config_name | sed 's/_/-/g')]]"
 			fi
 			cat << __END__
 $label
