Remove manual.html. The generated ones should just be in the web module maybe with binary flag. Fix order of .cvsignore.

--- a/doc/.cvsignore
+++ b/doc/.cvsignore
@@ -1,14 +1,14 @@
-Makefile
-Makefile.in
-manual
-*.swp
-elinks.html
-elinkskeys.html
-elinkskeys.5
-import-features.conf.txt
 *.man.txt
 *.man.xml
-manual.xml
+*.swp
+Makefile
+Makefile.in
+elinks.html
+elinkskeys.5
+elinkskeys.html
+import-features.conf.txt
+manual
+manual.*
 perl.html
 pod2htmd.tmp
 pod2htmi.tmp
