--- a/doc/man/man1/Makefile.am
+++ b/doc/man/man1/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.2 2005/05/03 22:33:07 jonas Exp $
+## $Id: Makefile.am,v 1.3 2005/05/18 02:40:54 jonas Exp $
 
-man_MANS = elinks.1 elinksmanual.1
+man_MANS = elinks.1
 
-EXTRA_DIST = elinks.1.in elinksmanual.1
+EXTRA_DIST = elinks.1.in
