Rewrite the Makefile:  - It now puts output files in separate directories depending on its    the document type.  - Use all-docs, pdf-docs, html-docs, man-docs to build all documentation    available in the desired document type.  - Update .cvsignore and includers of generated .txt files.

--- a/doc/.cvsignore
+++ b/doc/.cvsignore
@@ -1,14 +1,9 @@
-*.man.txt
-*.man.xml
 *.swp
 Makefile
 Makefile.in
-elinks.html
-elinkskeys.5
-elinkskeys.html
-import-features.conf.txt
-manual
-manual.*
+html
 perl.html
 pod2htmd.tmp
 pod2htmi.tmp
+txt
+xml
