--- a/features.conf
+++ b/features.conf
@@ -75,8 +75,7 @@ CONFIG_BOOKMARKS=yes
 # Frequently, you know you will not need it, then you can of course happily
 # forcibly remove support for it and save few bytes.
 #
-# Default: enabled if libexpat (required library) found and bookmarks are
-# enabled
+# Default: enabled if libexpat is found and bookmarks are enabled
 
 CONFIG_XBEL_BOOKMARKS=yes
 
@@ -554,5 +553,5 @@ CONFIG_BACKTRACE=yes
 CONFIG_NO_ROOT_EXEC=no
 
 
-# $Id: features.conf,v 1.31 2004/12/24 14:09:11 pasky Exp $
+# $Id: features.conf,v 1.32 2005/05/18 17:48:53 jonas Exp $
 # vim: filetype=sh textwidth=80
