--- a/configure.in
+++ b/configure.in
@@ -36,6 +36,7 @@ AM_CONDITIONAL(CONFIG_DOC, test "$CONFIG_DOC" = yes)
 # Check whether --enable-xbel or --disable-xbel was given.
 if test "x${enable_documentationl}" != xno; then
 	CONFIG_ASCIIDOC="no"
+	CONFIG_POD2HTML="no"
 	CONFIG_XMLTO="no"
 	CONFIG_JW="no"
 
@@ -54,11 +55,18 @@ if test "x${enable_documentationl}" != xno; then
 		CONFIG_JW="yes"
 	fi
 
+	AC_PATH_PROGS(POD2HTML, "pod2html")
+      	if test "x$POD2HTML" != "x"; then
+		CONFIG_POD2HTML="yes"
+	fi
+
 	AM_CONDITIONAL(CONFIG_ASCIIDOC, test "$CONFIG_ASCIIDOC" = yes)
+	AM_CONDITIONAL(CONFIG_POD2HTML, test "$CONFIG_POD2HTML" = yes)
 	AM_CONDITIONAL(CONFIG_XMLTO, test "$CONFIG_XMLTO" = yes)
 	AM_CONDITIONAL(CONFIG_JW, test "$CONFIG_JW" = yes)
 
 	AC_SUBST(CONFIG_ASCIIDOC)
+	AC_SUBST(CONFIG_POD2HTML)
 	AC_SUBST(CONFIG_XMLTO)
 	AC_SUBST(CONFIG_JW)
 fi
